--- a/index.html
+++ b/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
-<html ng-app = "myApp">
+<html ng-app="myApp">
 
-  <head>
-    <script data-require="angular.js@*" data-semver="4.0.0" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
-    <script data-require="angular.js@*" data-semver="4.0.0" src="script.ts"></script>
-    <script data-require="angular.js@*" data-semver="4.0.0" src="system.config.js"></script>
-    <script data-require="angular.js@*" data-semver="4.0.0" src="tsconfig.json"></script>
-    <script src="script.js"></script>
-  </head>
+<head>
+  <script data-require="angular.js@*" data-semver="4.0.0" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
+  <script data-require="angular.js@*" data-semver="4.0.0" src="script.ts"></script>
+  <script data-require="angular.js@*" data-semver="4.0.0" src="system.config.js"></script>
+  <script data-require="angular.js@*" data-semver="4.0.0" src="tsconfig.json"></script>
+  <script src="script.js"></script>
+</head>
 
-  <body >
-    <div ng-controller="myCtrl">
+<body ng-controller="myCtrl">
+    <!--activity 1-->
+    <!--<h1>{{message}}</h1>-->
+    <!--<b>{{person.firstName}}</b>-->
+    <!--<b>{{person.lastName}}</b>-->
+    <!--<div>-->
+    <!--  <img src="{{person.imageSrc}}" title="{{person.firstName}} {{person.lastName}}">-->
+    <!--</div>-->
+
+    <!--activity 2-->
+    <!--<h1>{{message}}</h1>-->
+    <!--<div>{{error}}</div>-->
+
+    <!--<form name="searchUser">-->
+    <!--  <input type="search" placeholder="Username to find" ng-model="username">-->
+    <!--  <input type="button" value="search">-->
+    <!--</form>-->
+
+    <!--<h2>Name: {{user.name}}</h2>-->
+    <!--<div>Location: {{user.location}}</div>-->
+    <!--<div>-->
+    <!--  <img ng-src="{{user.avatar_url}}" title="{{user.name}}">-->
+    <!--</div>-->
+
+    <!--activity 3-->
     <h1>{{message}}</h1>
-    <b>{{person.firstName}}</b>
-    <b>{{person.lastName}}</b>
+    <div>{{error}}</div>
+
+    <form name="searchUser">
+      <input type="search" placeholder="Username to find" ng-model="username">
+      <input type="button" value="search">
+    </form>
+
+    <h2>Name: {{user.name}}</h2>
+    <div>Location: {{user.location}}</div>
     <div>
-      <img src="{{person.imageSrc}}" title="{{person.firstName}} {{person.lastName}}">
+      <img ng-src="{{user.avatar_url}}" title="{{user.name}}">
     </div>
-    </div>
-  </body>
+</body>
 
 </html>
