--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
     <!--<h1>{{message}}</h1>-->
     <!--<div>{{error}}</div>-->
 
-    <!--<form name="searchUser">-->
-    <!--  <input type="search" placeholder="Username to find" ng-model="username">-->
-    <!--  <input type="button" value="search">-->
-    <!--</form>-->
-
     <!--<h2>Name: {{user.name}}</h2>-->
     <!--<div>Location: {{user.location}}</div>-->
     <!--<div>-->
@@ -37,15 +32,14 @@
     <h1>{{message}}</h1>
     <div>{{error}}</div>
 
-    <form name="searchUser">
-      <input type="search" placeholder="Username to find" ng-model="username">
-      <input type="button" value="search">
+    <form name="searchUser" ng-submit="search(username)">
+      <input type="search" required placeholder="Username to find" ng-model="username">
+      <input type="submit" value="Search">
     </form>
 
-    <h2>Name: {{user.name}}</h2>
-    <div>Location: {{user.location}}</div>
     <div>
-      <img ng-src="{{user.avatar_url}}" title="{{user.name}}">
+    <h2>{{user.name}}</h2>
+    <img ng-src="http://www.gravatar.com/avatar/{{user.gravatar_id}}" title="{{user.name}}">
     </div>
 </body>
 
