--- a/index.html
+++ b/index.html
@@ -100,6 +100,48 @@
   <!--</table>-->
 
   <!--activity 5-->
+  <!--<h1>{{message}}</h1>-->
+  <!--<div>{{error}}</div>-->
+
+  <!--<form name="searchUser" ng-submit="search(username)">-->
+  <!--  <input type="search" required placeholder="Username to find" ng-model="username">-->
+  <!--  <input type="submit" value="Search">-->
+  <!--</form>-->
+
+  <!--<div ng-show="user">-->
+  <!--  <h2>{{user.name}}</h2>-->
+  <!--  <img ng-src="{{user.avatar_url}}" title="{{user.name}}"> -->
+
+  <!--  Order By:-->
+  <!--  <select ng-model="repoSortOrder">-->
+  <!--    <option value="+name">Name</option>-->
+  <!--    <option value="-stargazers_count">No of Stars</option>-->
+  <!--    <option value="+language">Language</option>-->
+  <!--  </select>-->
+  <!--</div>-->
+
+  <!--<table ng-show="user">-->
+    <!--or-->
+  <!--<table ng-hide="!user">-->
+  <!--  <thead>-->
+  <!--    <tr>-->
+  <!--      <th>Name</th>-->
+  <!--      <th>No of Stars</th>-->
+  <!--      <th>Language</th>-->
+  <!--    </tr>-->
+  <!--  </thead>-->
+  <!--  <tbody>-->
+      <!--<tr ng-repeat="repo in repos | orderBy:'-stargazers_count'">-->
+      <!--or, if we want to use dynamic binding with 'Order By' list above-->
+  <!--    <tr ng-repeat="repo in repos | orderBy:repoSortOrder">-->
+  <!--      <td>{{repo.name}}</td>-->
+  <!--      <td>{{repo.stargazers_count | number:1}}</td>-->
+  <!--      <td>{{repo.language}}</td>-->
+  <!--    </tr>-->
+  <!--  </tbody>-->
+  <!--</table>-->
+
+  <!--activity 6-->
   <h1>{{message}}</h1>
   <div>{{error}}</div>
 
@@ -108,38 +150,7 @@
     <input type="submit" value="Search">
   </form>
 
-  <div ng-show="user">
-    <h2>{{user.name}}</h2>
-    <img ng-src="{{user.avatar_url}}" title="{{user.name}}">
-
-    Order By:
-    <select ng-model="repoSortOrder">
-      <option value="+name">Name</option>
-      <option value="-stargazers_count">No of Stars</option>
-      <option value="+language">Language</option>
-    </select>
-  </div>
-
-  <table ng-show="user">
-    <!--or-->
-  <!--<table ng-hide="!user">-->
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>No of Stars</th>
-        <th>Language</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!--<tr ng-repeat="repo in repos | orderBy:'-stargazers_count'">-->
-      <!--or, if we want to use dynamic binding with 'Order By' list above-->
-      <tr ng-repeat="repo in repos | orderBy:repoSortOrder">
-        <td>{{repo.name}}</td>
-        <td>{{repo.stargazers_count | number:1}}</td>
-        <td>{{repo.language}}</td>
-      </tr>
-    </tbody>
-  </table>
+  <div ng-include="'user-details.html'" ng-show="user"></div>
 </body>
 
 </html>
