--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
   <h1>{{message}}</h1>
   <div>{{error}}</div>
 
+  {{countDown}}
   <form name="searchUser" ng-submit="search()">
     <input type="search" required placeholder="Username to find" ng-model="username">
     <input type="submit" value="Search">
